# szte-IBT104L-2022-2

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md  projekt.sln  utest.c
.github/workflows/: deploy.yml  test.yml
Billentyu/: Billentyu.c  Billentyu.h  BillentyuTest.c  BillentyuTest.h  CMakeLists.txt
Common/: CMakeLists.txt  Common.c  Common.h  CommonTest.c  CommonTest.h  CommonTypes.h
Kaszas/: CMakeLists.txt  Entry.c  Kaszas.c  Kaszas.h  KaszasTest.c  KaszasTest.h
Nyomtato/: CMakeLists.txt  Nyomtato.c  Nyomtato.h  NyomtatoTest.c  NyomtatoTest.h
